<resources>
    <string name="app_name">agam</string>
    <string name="health_center_care">Health Center Care</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="new_user_sign_up_here">New user Sign Up Here</string>
    <string name="login_activity">Login Activity</string>
    <string name="REGISTRATION">REGISTRATION</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="healthcare_centre">Healthcare Centre</string>
    <string name="todo">TODO</string>
    <string name="tod">TOD</string>
    <string name="lab_test">LAB TEST</string>
    <string name="buy_medicine">BUY MEDICINE</string>
    <string name="find_doctor">FIND DOCTOR</string>
    <string name="health_care_articles">HEALTH CARE ARTICLES</string>
    <string name="doctor_details">DOCTOR DETAILS</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="_24_7_healthcare">24*7 HEALTHCARE</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="dietician">DIETICIAN</string>
    <string name="family_physician">FAMILY PHYSICIAN</string>
    <string name="diet">DIETICIAN</string>
    <string name="dentist">DENTIST</string>
    <string name="surgeon">SURGEON</string>
    <string name="cardiologist">CARDIOLOGIST</string>
    <string name="gynecologist">GYNECOLOGIST</string>
    <string name="back">BACK</string>
    <string name="textview">TextView</string>
</resources>