<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B4E6E"
    tools:context=".FirstPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="@string/health_center_care"
        android:textAlignment="center"
        android:textColor="#9B76DF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/REGISTRATION"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.012" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="263dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:drawableStart="@drawable/free_icon_1__18_"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textColor="#FBFAFA"
        android:textColorHint="#F4EFEF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="259dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:drawableStart="@android:drawable/sym_action_email"
        android:drawablePadding="5sp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textColor="#FDFBFB"
        android:textColorHint="#F6F4F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:text="@string/Create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegConfirmPassword"
        app:layout_constraintVertical_bias="0.213"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/already_have_an_account"
        android:textColor="#FBF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@android:drawable/divider_horizontal_textfield"
        android:drawableStart="@drawable/free_icon_1__22_"
        android:drawablePadding="7sp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="#FBF8F8"
        android:textColorHint="#F8F4F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextRegConfirmPassword"
        android:layout_width="262dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:background="@android:drawable/divider_horizontal_textfield"
        android:drawableStart="@drawable/free_icon_1__22_"
        android:drawablePadding="7sp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#FAF6F6"
        android:textColorHint="#F8F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>