<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/surgical_item_500x500"
    tools:context=".FrontPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="@string/health_center_care"
        android:textAlignment="center"
        android:textColor="#41569F"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="336dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:drawableStart="@drawable/free_icon_1__18_"
        android:drawablePadding="15sp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="20sp"
        android:textColor="#F8F3F3"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="336dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:background="@android:drawable/divider_horizontal_textfield"
        android:drawableStart="@drawable/free_icon_1__22_"
        android:drawablePadding="15sp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:textColor="#F1EEEE"
        android:textColorHint="#FFFCFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:background="#F8F3F3"
        android:text="@string/LOGIN"
        android:textAlignment="center"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#C5BFBF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_sign_up_here"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/login_activity"
        android:textAlignment="center"
        android:textColor="#FAF9F9"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.038" />
</androidx.constraintlayout.widget.ConstraintLayout>